refactor code and implement get user profile